Updated property sheets to use relative path 01

--- a/szabi_internal.props
+++ b/szabi_internal.props
@@ -3,8 +3,7 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <IncludePath>..\szabi\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\CODE\szabi\Release;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup />
   <ItemGroup />
