--- a/szabi_x64_r.props
+++ b/szabi_x64_r.props
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <IncludePath>E:\CODE\szabi\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\szabi\include;$(IncludePath)</IncludePath>
     <LibraryPath>E:\CODE\szabi\x64\Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup />
