--- a/szabi_x64_d.props
+++ b/szabi_x64_d.props
@@ -4,7 +4,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <IncludePath>..\szabi\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\CODE\szabi\x64\Debug;$(LibraryPath)</LibraryPath>
+    <LibraryPath>..\szabi\x64\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup />
   <ItemGroup />
